cmake_minimum_required(VERSION 2.6)

ENABLE_TESTING()

SET (M_NAME biopp)
# SET (M_VERSION 1.11.6)
SET (INTERFACE python_${M_NAME}.i)

IF(NOT BUILD_LIBS)
  SET (MAP_ROOT ../../../../..)
  SET (CMAKE_MODULE_PATH ${MAP_ROOT}/tools/cmake-support/modules)
ENDIF(NOT BUILD_LIBS)

# SET (USE_ZLIB TRUE)

INCLUDE_DIRECTORIES("${MAP_ROOT}/contrib/biopp/utils/Utils")
SET (USE_SWIG_INCLUDEPATH "${MAP_ROOT}/contrib/biopp/utils/Utils")
SET (USE_INCLUDEPATH utils/Utils)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY biolib)

FIND_PACKAGE(MapPython REQUIRED)

POST_BUILD_PYTHON_BINDINGS()
TEST_PYTHON_BINDINGS()
INSTALL_PYTHON_BINDINGS()

